updating and pushing final files

--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
     <header>
       <h1 class="page-title"> Explore your Digital Content <span class="large">Assets</span></h1>
     </header>
-    <i class="material-icons" style="float:right;" onclick="sortData()">sort_by_alpha</i>
+    <div>
+      <i class="material-icons" style="float:right;" onclick="sortData()">sort_by_alpha</i>
+    </div>
     <div id="assets-data">
+      <!-- Assets go here -->
     </div>
   </div>
   <script src="script.js"></script>
